# mailqueue-runner

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  VERSION.txt  appveyor.yml  dev_requirements.txt  nose2.cfg  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml  tests.yml
rpm/: .gitignore  mailqueue-runner.conf  mailqueue-runner.logrotate  mailqueue-runner.spec  python-mailqueue-runner.spec  rebuild-locally.sh
schwarz/: log_utils.py
schwarz/log_utils/: __init__.py  testutils.py
schwarz/mailqueue/: __init__.py  aliases_parser.py  app_helpers.py  cli.py  compat.py  maildir_utils.py  mailer.py  mailflow_check.py  message_handler.py  message_utils.py  mq_mail.py  mq_queue_inspect.py  mq_sendmail.py  plugins.py  queue_runner.py  smtpclient.py  testutils.py
schwarz/mailqueue/cli/: __init__.py  mq_mail.py  mq_queue_inspect.py  mq_sendmail.py  one_shot_queue_run.py  send_test_message.py
schwarz/mailqueue/lib/: __init__.py  fake_fs_utils.py  result.py  smtplib_py37.py
schwarz/mailqueue/lib/tests/: result_test.py
scripts/: mq-run  mq-send-test
tests/: alias_parser_test.py  dates_test.py  enqueue_message_test.py  message_handler_test.py  message_parsing_test.py  mq_mail_test.py  mq_queue_inspect_test.py  mq_run_test.py  mq_send_test.py  mq_sendmail_test.py  queue_runner_test.py  smtp_mailer_fullstack_test.py  smtp_mailer_test.py  smtpclient_logging_test.py
