[metadata]
name        = mailqueue-runner
version     = file: VERSION.txt
author      = Felix Schwarz
author_email = felix.schwarz@oss.schwarz.eu
url          = https://github.com/FelixSchwarz/mailqueue-runner
license     = MIT and Python
license_file = LICENSE.txt

long_description = file:README.md
long_description_content_type = text/markdown


[options]
python_requires = >= 2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
packages = find:
namespace_packages = schwarz
zip_safe = false
include_package_data = true

install_requires =
    boltons
    docopt
    # portalocker 2.0 dropped Python 2 support
    portalocker < 2.0       ; python_version < '3.0'
    portalocker             ; python_version > '3.0'
    PuzzlePluginSystem >= 0.6.0 # >= 0.6.0: .terminate_all_activated_plugins()
    six

scripts =
    scripts/mq-run
    scripts/mq-send-test


[options.extras_require]
# "testutils" provides helpers to simplify testing (also usable by 3rd party code)
testutils =
    pymta
    schwarzlog

testing =
    # Even the oldest versions of "time-machine" support only Python 3.6+
    freezegun < 1.0             ; python_version < '3.0'
    time-machine                ; python_version > '3.0'
    mock                        ; python_version < '3.0'
    pymta >= 0.7.0              # >= 0.7.0: AUTH LOGIN
    pytest
    schwarzlog
    setuptools
    testfixtures



[bdist_wheel]
universal = 1
