[metadata]
name        = mailqueue-runner
version     = file: VERSION.txt
author      = Felix Schwarz
author_email = felix.schwarz@oss.schwarz.eu
url          = https://github.com/FelixSchwarz/mailqueue-runner
license     = MIT and Python
license_file = LICENSE.txt

long_description = file:README.md
long_description_content_type = text/markdown


[options]
python_requires = >= 3.6
packages = find_namespace:
zip_safe = false
include_package_data = true

install_requires =
    boltons
    docopt
    portalocker

[options.extras_require]
plugins =
    PuzzlePluginSystem >= 0.6.0 # >= 0.6.0: .terminate_all_activated_plugins()

# "testutils" provides helpers to simplify testing (also usable by 3rd party code)
testutils =
    # >= 0.8: SMTPCommandParser
    pymta >= 0.8
    schwarzlog

testing =
    %(plugins)s
    %(testutils)s
    dotmap
    time-machine; implementation_name != 'pypy'
    pytest
    setuptools
    testfixtures


[options.entry_points]
console_scripts =
    mq-run       = schwarz.mailqueue.cli:one_shot_queue_run_main
    mq-send-test = schwarz.mailqueue.cli:send_test_message_main


[bdist_wheel]
universal = 1
